<resources>
    <string name="app_name">Library</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="actor">Actor</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="create_new_account">Create new account</string>
    <string name="insert_new_book">Insert new book</string>
    <string name="update_book">Update book</string>
    <string name="delete_book">Delete book</string>
    <string name="login">Login</string>
    <string name="title_activity_account">AccountActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="confirme_password">Confirme password</string>
    <string name="create_new_book">Create new book</string>
    <string name="book_id">Book Id</string>
</resources>