<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">

    <EditText
    android:id="@+id/actor"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/actor"
    android:layout_margin="60dp"
    android:inputType="text"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/actor"
        app:layout_constraintStart_toStartOf="@id/actor"
        app:layout_constraintTop_toBottomOf="@id/actor"/>

    <EditText
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:inputType="number"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/actor"
        app:layout_constraintStart_toStartOf="@id/actor"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <Button
        android:id="@+id/btn_create_new_book"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_new_book"
        app:layout_constraintEnd_toEndOf="@id/actor"
        app:layout_constraintStart_toStartOf="@id/actor"
        app:layout_constraintTop_toBottomOf="@+id/year"/>


</androidx.constraintlayout.widget.ConstraintLayout>