<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_margin="60dp"
        android:inputType="textEmailAddress"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/user_name"
        app:layout_constraintStart_toStartOf="@id/user_name"
        app:layout_constraintTop_toBottomOf="@id/user_name"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/user_name"
        app:layout_constraintStart_toStartOf="@id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <Button
        android:id="@+id/btn_create_new_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        app:layout_constraintEnd_toEndOf="@id/user_name"
        app:layout_constraintStart_toStartOf="@id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>